2003-07-04  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/AccelGroup.xml: revert parts of my last patch, as some of
	the links do not resolve due to bug #38538.

	* en/Gtk/Button.xml (NewFromLabel):
	(NewFromStock): documented.

	* en/Gtk/Frame.xml (GetLabelAlign): documented.

	* en/Gtk/IconFactory.xml:
	* en/Gtk/IconSet.xml: 	
	* en/Gtk/IconSize.xml: 
	* en/Gtk/IconSource.xml: documented.

	* en/Gtk/Paned.xml: added documentation for the events.

	* en/Gtk/ResponseType.xml: documented.

2003-07-02  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Container.xml: add first draft

2003-07-02  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/TreeSelection.xml: fix method signatures, small updates

2003-06-30  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/AccelGroup.xml: Added some more hyperlinks to the
	existing text.

2003-06-26  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/TreeView.xml: update example, paramater references
	* en/Gtk/Toolbar.xml: update and fix methods

2003-06-23  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/WindowGroup.xml: add some info
	* en/Gtk/WindowPosition.xml: update
	* en/Gtk/WindowType.xml: don't use contractions
	* en/Gtk/ToolbarChildType.xml: add first draft
	* en/Gtk/SortType.xml: update
	* en/Gtk/SizeGroupMode.xml: update
	* en/Gtk/ShadowType.xml: update
	* en/Gtk/PolicyType.xml: update
	* en/Gtk/PackType.xml: update
	* en/Gtk/Justification.xml: update
	* en/Gtk/CurveType.xml: update
	* en/Gtk/AttachOptions.xml: update

2003-06-15  John Luke  <jluke@cfl.rr.com>
    * en/Gtk/Dialog.xml: add more info, add example
    * en/Gtk/DialogFlags: add first draft

2003-06-13  John Luke  <jluke@cfl.rr.com>
    * en/Gtk/ProgressBarStyle.xml
    * en/Gtk/ProgressBarOrientation.xml
    * en/Gtk/ImageType.xml: add first drafts

2003-06-12  Hector E. Gomez Morales <hgomez_36@flashmail.com>
	* en/Gtk/Window.xml: first draft.

2003-06-12  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/Image.xml: add parameter and returns references, Methods