@@ -200,7 +200,7 @@ namespace GtkDialogSample
         <param name="response_id">an object of type <see cref="T:System.UInt32"/>.</param>
         <param name="setting">an object of type <see cref="T:System.Boolean"/>.</param>
         <remarks>
-            Calls <see cref="M:Gtk.Widget.SetSensitive(System.Int32,System.Boolean)"/> for each widget in the <see cref="P:Gtk.Dialog.ActionArea"/> with the given response_id.
+            Sets <see cref="P:Gtk.Widget.Sensitive"/> = <see langword="true"/> for each widget in the <see cref="P:Gtk.Dialog.ActionArea"/> with the given response_id.
             A convenient way to sensitize/desensitize dialog buttons.
         </remarks>
       </Docs>
@@ -346,7 +346,7 @@ namespace GtkDialogSample
         <summary>To be added</summary>
         <remarks>
             Emitted when an action widget is clicked, the <see cref="T:Gtk.Dialog"/>
-            receives a delete event, or the application programmer calls <see cref="M:Gtk.Dialog.Respond()"/>.
+            receives a delete event, or the application programmer calls <see cref="M:Gtk.Dialog.Respond(System.Int32)"/>.
             On a delete event, the response ID is <see cref="F:Gtk.ResponseType.None"/>.
             Otherwise, it depends on which action widget was clicked.
         </remarks>
