@@ -1,3 +1,8 @@
+2003-07-04  John Luke  <jluke@cfl.rr.com>
+	
+	* en/Gtk/Dialog.xml: fixes
+	* en/Gtk/Application.xml: add example, fix methods
+
 2003-07-04  Duncan Mak  <duncan@ximian.com>
 
 	* en/Gtk/AccelGroup.xml: revert parts of my last patch, as some of
@@ -17,7 +22,7 @@
 
 	* en/Gtk/ResponseType.xml: documented.
 
-2003-07-02  John Luke  <jluke@cfl.rr.com>
+2003-07-03  John Luke  <jluke@cfl.rr.com>
 
 	* en/Gtk/Container.xml: add first draft
 
